feat: Add sql scripts

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 { 
   "ConnectionStrings": {
-  "ProjectConnection": "host=localhost; port=3306; database=student_fee_management; user=root; password=0v0AWkBn;"
+  "ProjectConnection": "host=localhost; port=PORT; database=student_fee_management; user=USER; password=PASSWORD;"
   },
   "Logging": {
     "LogLevel": {
